<resources>
    <string name="app_name">AquApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_registro">registro</string>
    <string name="title_activity_principal">Principal</string>
    <string name="aquapp">AquAPP</string>
    <string name="medidor">Medidor</string>
    <string name="usuario">Usuario</string>
    <string name="lectura_ant">Lectura Ant:</string>
    <string name="fecha">Fecha</string>
    <string name="_00000">00000</string>
    <string name="lectura_act">Lectura Act:</string>
    <string name="consumo">Consumo</string>
    <string name="todo">TODO</string>
    <string name="registrar">Registrar</string>
</resources>
