<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarLectura"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/spinCiclo"
            android:layout_width="300dp"
            android:layout_height="49dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textAlignment="center" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteMedidor"
            android:layout_width="300dp"
            android:layout_height="49dp"
            android:layout_gravity="center"
            android:hint="@string/medidor"
            android:inputType="textPostalAddress"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/tUsuario"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/usuario"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <LinearLayout
            android:id="@+id/linearLayout9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="159dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lectura_ant"
                android:textSize="15sp" />


            <EditText
                android:id="@+id/tFecAnt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Fecha"
                android:textAlignment="center"
                android:inputType="none" />
            <EditText
                android:id="@+id/tLecAnt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="00000"
                android:inputType="number"
                android:editable="false"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lectura_act"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/tFecAct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Fecha"
                android:inputType="none"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/tLecAct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="00000"
                android:inputType="number"
                android:textAlignment="center"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tConsumo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/consumo"
                android:textAlignment="center" />

            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/camara"
                    android:layout_width="195dp"
                    android:layout_height="125dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/todo"
                    android:onClick="onclick"
                    app:srcCompat="@drawable/camera" />
        </LinearLayout>


        <Button
                android:id="@+id/bRegistrar"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/registrar"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>